Correction of about heading on iPhone landscape

--- a/portfolio-static/resources/css/main.css
+++ b/portfolio-static/resources/css/main.css
@@ -345,7 +345,7 @@ input[type="submit"] {
   }
 
   .about-heading h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .about-heading h6 {
